[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/box.png" type="Texture" id=1]
[ext_resource path="res://assets/tiles/button_white.png" type="Texture" id=2]
[ext_resource path="res://objects/2b_box_raise.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 3 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.0
height = 2.0

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=10]
resource_name = "Activate"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1.62451, 1 ),
"update": 0,
"values": [ Vector2( 6, 16 ), Vector2( 6, -8 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "ButtonDown"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Button/Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Button/StaticBody2D/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 4 ), Vector2( 0, 6 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "ButtonDown2"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Button2/Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ), Vector2( 0, -2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Button2/StaticBody2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 22, 2 ), Vector2( 22, 4 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "ButtonUp"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Button/Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Button/StaticBody2D/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 6 ), Vector2( 0, 2 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "ButtonUp2"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Button2/StaticBody2D/CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 4 ), Vector2( 0, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Button2/Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -2 ), Vector2( 0, -4 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "DoorClosed"
length = 0.2

[sub_resource type="Animation" id=7]
resource_name = "DoorOpen"
length = 0.2

[sub_resource type="Animation" id=11]
resource_name = "New Anim"

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Button/StaticBody2D/CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Button/Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, 16 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Button2/Sprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Button2/StaticBody2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 22, 2 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Button2/StaticBody2D/CollisionShape2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ) ]
}

[node name="ButtonRaise" type="Node2D"]
script = ExtResource( 3 )

[node name="Button" type="Node2D" parent="."]
position = Vector2( 0, -2 )

[node name="Sprite" type="Sprite" parent="Button"]
modulate = Color( 0.607843, 0.380392, 0.458824, 1 )
z_index = -1
texture = ExtResource( 2 )
offset = Vector2( 0, -2 )

[node name="Area2D2" type="Area2D" parent="Button"]
position = Vector2( 0, 2 )
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button/Area2D2"]
position = Vector2( 0, -5 )
shape = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Button"]
position = Vector2( 0, 2 )
collision_layer = 96
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button/StaticBody2D"]
position = Vector2( 0, 4 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Button2" type="Node2D" parent="."]
position = Vector2( 24, 0 )

[node name="Sprite" type="Sprite" parent="Button2"]
modulate = Color( 0.607843, 0.380392, 0.458824, 1 )
position = Vector2( 22, 0 )
z_index = -1
texture = ExtResource( 2 )
offset = Vector2( 0, -4 )

[node name="Area2D" type="Area2D" parent="Button2"]
position = Vector2( 22, 2 )
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button2/Area2D"]
position = Vector2( 0, -5 )
shape = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Button2"]
position = Vector2( 22, 2 )
collision_layer = 96
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button2/StaticBody2D"]
position = Vector2( 0, 2 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 6, 16 )

[node name="Box" type="Sprite" parent="Node2D"]
position = Vector2( 58, -24 )
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Node2D/Box"]
position = Vector2( -55, 8 )
collision_layer = 64
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Box/StaticBody2D"]
position = Vector2( 55, -8 )
shape = SubResource( 9 )

[node name="Box2" type="Sprite" parent="Node2D"]
position = Vector2( 58, -40 )
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Node2D/Box2"]
position = Vector2( -55, 8 )
collision_layer = 64
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Box2/StaticBody2D"]
position = Vector2( 55, -8 )
shape = SubResource( 9 )

[node name="Box3" type="Sprite" parent="Node2D"]
position = Vector2( 58, -56 )
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Node2D/Box3"]
position = Vector2( -55, 8 )
collision_layer = 64
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Box3/StaticBody2D"]
position = Vector2( 55, -8 )
shape = SubResource( 9 )

[node name="Box4" type="Sprite" parent="Node2D"]
position = Vector2( 58, -72 )
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Node2D/Box4"]
position = Vector2( -55, 8 )
collision_layer = 64
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Box4/StaticBody2D"]
position = Vector2( 55, -8 )
shape = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Activate = SubResource( 10 )
anims/ButtonDown = SubResource( 4 )
anims/ButtonDown2 = SubResource( 12 )
anims/ButtonUp = SubResource( 5 )
anims/ButtonUp2 = SubResource( 13 )
anims/DoorClosed = SubResource( 6 )
anims/DoorOpen = SubResource( 7 )
"anims/New Anim" = SubResource( 11 )
anims/RESET = SubResource( 8 )

[connection signal="body_entered" from="Button/Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Button/Area2D2" to="." method="_on_Area2D2_body_exited"]
[connection signal="body_entered" from="Button2/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Button2/Area2D" to="." method="_on_Area2D_body_exited"]
